# juddperft

./: CMakeLists.txt  README.md  cmake-build-fresh.sh  cmake-build.sh
engine/: CMakeLists.txt  Juddperft.cpp  diagnostics.cpp  engine.cpp  fen.cpp  hashtable.cpp  movegen.cpp  search.cpp  timemanage.cpp  winboard.cpp
include/juddperft/: diagnostics.h  movegen.h  winboard.h
